# rag-cookbooks

./: .env.example  .gitignore  pyproject.toml  todo.md
advanced_rag_techniques/: contextual_rag.ipynb  contextual_rag.py  fusion_rag.ipynb  hybrid_rag.ipynb  hybrid_rag_llamaindex.ipynb
agent_techniques/: react.ipynb  react.py  reflexion.py
agentic_rag_techniques/: adaptive_rag.py
